# project0330

./: EgoDLL.sln  EgoDriver.code-workspace  EgoGSML.sln  EgoSystem.code-workspace
7z/: 7ZItf.cpp  7ZItf.h  7z.vcxproj
EgoController/: CMakeLists.txt  PeerConnection.cpp  PeerConnection.h  asyncio_utils.cpp  asyncio_utils.h  config.json  main.cpp  message_queue.cpp  message_queue.h  pool.h  socket_lidar.cpp  socket_lidar.h
EgoDLL/: EgoClient.cpp  EgoClient.h  EgoController.cpp  EgoController.h  EgoDLL.cpp  EgoDLL.vcxproj  EgoWindow.cpp  EgoWindow.h  car_sim.cpp  car_sim.h  control_sensor.cpp  control_sensor.h  lidar_sim.cpp  lidar_sim.h  message_queue.cpp  message_queue.h  null_sim.h  out_sim.cpp  out_sim.h  radar_sim.cpp  radar_sim.h
EgoDLL/include/: EgoInterface.h
EgoDllTest/: EgoDllTest.cpp  EgoDllTest.h  EgoDllTest.rc  EgoDllTest.vcxproj  MainDlg.cpp  MainDlg.h  RenderWindow.cpp  RenderWindow.h  resource.h  stdafx.cpp  stdafx.h
EgoDllTest/run/: Config.json
EgoServer/: DBConnect.cpp  DBConnect.h  EgoServer.vcxproj  IOSocket.cpp  IOSocket.h  NetService.cpp  NetService.h  UserManager.cpp  UserManager.h  UserSocket.cpp  UserSocket.h  WebHandler.cpp  WebHandler.h  WebServer.cpp  WebServer.h  main.cpp  scoped_ptr.h
EgoSystem/: CMakeLists.txt  CMakeSettings.json  VideoRenderer.cpp  VideoRenderer.h  config.json  imu_sensor.cpp  imu_sensor.h  main.cpp  message_queue.cpp  message_queue.h  pool.h  radar_sensor.cpp  radar_sensor.h  robot_sensor.cpp  robot_sensor.h
EgoUpdate/: EgoUpdate.vcxproj  MainDlg.cpp  MainDlg.h  Updator.cpp  Updator.h  Updator.rc  resource.h  stdafx.cpp  stdafx.h
EgoWindow/: ControlSensor.cpp  ControlSensor.h  EgoWindow.aps  EgoWindow.cpp  EgoWindow.h  EgoWindow.rc  EgoWindow.vcxproj  MainDlg.cpp  MainDlg.h  MultiMonitorEnumerator.cpp  MultiMonitorEnumerator.h  VideoRenderer.cpp  VideoRenderer.h  WindowThread.cpp  WindowThread.h  resource.h  stdafx.cpp  stdafx.h
Protocol/: protocol.proto
Protocol/linux/: protocol.pb.cc  protocol.pb.h
Qt/: Config.json  Ego.cpp  Ego.h  ImageProvider.cpp  ImageProvider.h  appmodel.cpp  appmodel.h  main.cpp  main.h  main.qml  qml.qrc  zhongye.pro
Qt/components/: BusyIndicator.qml  CButton.qml  CarPage.qml  CustomLoading.qml  DetailPage.qml  LoginPage.qml  MainWindow.qml  PanelWindow.qml  SplashScreen.qml  SubWindow.qml  backend.js
Run/: Config.json  install.iss
common/: FeedBack.h  Feedback.cpp  comm.h  iobuffer.cpp  iobuffer.h  notifier.h  peer_connection.cpp  peer_connection.h  pool.h  sensor_socket.h  socket_client.cpp  socket_client.h  update_thread.cpp  update_thread.h
pycode/: file.py
updator/: 7ZItf.cpp  7ZItf.h  CMakeLists.txt  main.cpp
webrtcinterop/: CMakeLists.txt  VcmCapturer.h  VideoDecoder.h  VideoFilter.h  VideoScaler.h  api.cpp  audio_frame_observer.cpp  audio_frame_observer.h  callback.h  capture_factory.h  capture_op.cpp  capture_op.h  data_channel_observer.cpp  data_channel_observer.h  framework.h  gsml_capturer.cpp  gsml_capturer.h  lock.h  peer_connection.cpp  peer_connection.h  sanitize_string.cpp  sanitize_string.h  sdp_utils.cpp  sdp_utils.h  video_frame_observer.cpp  video_frame_observer.h  webrtcinterop.cpp  webrtcinterop.vcxproj
webrtcinterop/include/: api.h
